
  o Improvements for the predict() method:
    - new types "parameter", "density", "probability", and "crps"
    - with type="response" now the expected value and not the location 
      parameter is returned (not equal for censored and truncated 
      distributions). For better backward compatibility, the default type is
      set to "location".

  o Changed argument names mean and sd to location and scale in logistic and
    student-t distribution functions 

  o Added new function "crch.stabsel" for stability selection based on    
    "crch.boost.fit". Small S3 methods for the returned class "stabsel.crch"
    are also provided.
  

Changes in Version 1.0-0
  
  o New release accompanying the R-Journal paper: "Heteroscedastic Censored 
    and Truncated Regression with crch" by Messner, Mayr, and Zeileis
    which appears as R-Journal 8(1). See also citation("crch"). 
    
  o Added estfun() method for crch objects


Changes in Version 0.9-2
  
  o The crch() function now supports coefficient optimization by
    boosting to automatically select the most relevant input variables 
    in high dimensional data settings. Extractor and plotting functions 
    for corresponding crch.boost objects are also available.

  o Transferred functions to estimate density, distribution, score, and 
    Hessian matrices to C-code to accelerate coefficient optimization.

  o Added option to crch() to avoid computation of covariance matrix

  o Added left and right arguments to predict.crch() and 
    predict.crch.boost() to allow quantile predictions for non-constant 
    censoring or truncation points.


Changes in Version 0.9-1

  o Added model.matrix() and model.frame() methods for crch objects

  o Bug Fix in predict.crch(): In previous versions predictions for 
    models with other link functions than the log gave wrong results


Changes in Version 0.9-0

  o Added vignette to introduce the crch() function with some
    theoretical background and an illustrating example: